fixed calculator height on mobile

--- a/main.css
+++ b/main.css
@@ -28,6 +28,7 @@ html{
     margin: auto;
     margin-top: 3vw;
     box-shadow: 5px 5px grey;
+    min-height: 99vmin;
 }
 .calculator div{
     width: 12%;
